@@ -1,3 +1,8 @@
+2013-02-24 JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: add global package include file to RcppExports.cpp
+        if it exists
+
 2013-02-19 Romain Francois <romain@r-enthusiasts.com>
 
         * src/api.cpp : more debugging
